# Vision-wallet

./: .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  Cargo.toml  DISCORD_INTEGRATION_TODO.md  INSTALL-WALLET.bat  INSTALL.md  MARKETPLACE_ASSESSMENT.md  MINI_COMMAND_CENTER_CHECKLIST.md  MINI_COMMAND_CENTER_COMPLETE.md  MINI_COMMAND_CENTER_JOURNEY.md  MINI_COMMAND_CENTER_REFERENCE.css  PR_BODY.md  PR_TEXT.md  QUICK_REFERENCE.md  README-PRODUCTION.txt  README-WALLET-INSTALL.txt  README.md  RELEASE_CHECKLIST.md  STANDALONE-README.md  START-HERE-WALLET.txt  START-WALLET.bat  START-WALLET.ps1  WALLET_ALPHA_LIVE_NODE_HARNESS.md  WALLET_ALPHA_MILESTONE.md  WALLET_ALPHA_STATUS.md  index.html  package-lock.json  package.json  quick-start.bat  quick-start.ps1  quick-start.sh  start-wallet-full.bat  start-wallet-full.ps1  tailwind.config.ts  test-backend.ps1  tsconfig.json  tsconfig.node.json  vision-market.out.txt  vision.toml  (+4 more)
.githooks/: pre-commit.ps1
.github/: pull_request_template.md
.github/workflows/: bech32-check.yml  bech32-strict-test.yml  ci.yml
bech32_probe/: Cargo.toml  bech32_py_probe.py  test_run_log.txt
bech32_probe/src/: main.rs
docs/: DEBUG_CRYPTO.md
public/: test.html  wallet-config.json
scripts/: copy-env.js
src/: App.tsx  index.css  main.tsx  polyfills.ts  simple-main.tsx
src/__tests__/: smoke.test.ts
src/api/: nodeApi.ts
src/components/: BelieverBadge.tsx  CashAirdropPanel.tsx  CreateWalletFlow.tsx  DepositAddresses.tsx  DepositModal.css  DepositModal.tsx  DepositWatcher.css  DepositWatcher.tsx  GlobePeers.css  GlobePeers.tsx  GovernancePanel.css  GovernancePanel.tsx  GuardianControlLink.tsx  ImportWalletFlow.tsx  LogsPanel.tsx  MessageCenter.tsx  MiniCommandCenter.tsx  MiningControls.css  MiningControls.tsx  MultiCurrencyBalances.tsx  NavTabs.tsx  Pane.tsx  RecentSendsList.tsx  RoutingIntelligenceDashboard.tsx  TipButton.tsx  Toaster.tsx  VaultCard.tsx  ui.tsx  (+4 more)
tests/: bech32_debug.rs  bech32_polymod.rs  cash_admin_cursor.rs  cash_store_migration.rs  common.rs  config_parse.rs  cursor_roundtrip.rs  e2e_vision_market.rs  integration_smoke.rs  integration_vision_market.rs  market_land_p2p.rs  mock_chain_mode.rs  mock_electrum_all.rs  scripthash_addr.rs  scripthash_bch_cashaddr.rs  scripthash_bech32.rs
tools/: Cargo.toml  probe_listings.rs
(+64 files in other folders)
