[package]
name = "vision-market"
version = "0.1.0"
edition = "2021"
authors = ["Donald Etcher <founder@visionworld.io>"]
license = "AGPL-3.0"
description = "Vision marketplace backend for LAND and CASH"
repository = "https://github.com/yourusername/vision-market"

[dependencies]
axum = { version = "0.8", features = ["json", "macros", "http1", "http2", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
dotenvy = "0.15"
# stripe dependency removed temporarily because a compatible crate/version was not found on crates.io
# Add back the official Stripe Rust client or appropriate crate when integrating payments.
# stripe = "0.30.0"
lazy_static = "1.4"
hex = "0.4"
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
axum-server = "0.6"
tokio-rustls = "0.24"
rustls = "0.23"
webpki-roots = "0.26"
# HTTP client with rustls-tls (async). Integration tests use async `reqwest::Client`.
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
once_cell = "1.19"
sha2 = "0.10"
bs58 = "0.5"
bech32 = "0.9"
bitcoin = "0.29"
cashaddr = "0.2"
bytes = "1.4"
async-trait = "0.1"
base64 = "0.21"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.9"
tokio-test = "0.4"
tracing-subscriber = "0.3"
urlencoding = "2.1"
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
futures = "0.3"
tracing = "0.1"
 

[features]
default = []
testhooks = []
dev = []
bech32-permissive = []

[profile.dev]
# Faster incremental builds, keep defaults if you already have them

[workspace.metadata.clippy]
warn = [
	"clippy::pedantic",
	"clippy::nursery",
	"clippy::cargo_common_metadata",
	"clippy::dbg_macro",
	"clippy::todo",
	"clippy::unimplemented",
	"clippy::unwrap_used",
	"clippy::expect_used",
]

allow = [
	"clippy::module_name_repetitions",
	"clippy::missing_errors_doc",
	"clippy::missing_panics_doc",
	"clippy::wildcard_imports",
]
